--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -15,9 +15,24 @@
     </parent>
 
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.data</groupId>-->
+            <!--<artifactId>spring-data-jpa</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-core</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-jpa</artifactId>-->
+            <!--<version>2.0.8</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
+            <version>1.9.0.RELEASE</version>
         </dependency>
     </dependencies>
 
