--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>nl.ocwduo.vzub</groupId>
     <artifactId>parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>domain</module>
+        <module>service</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
@@ -16,6 +20,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>nl.ocwduo.vzub</groupId>
+                <artifactId>domain</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
