--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>domain</module>
         <module>service</module>
+        <module>fileshare</module>
     </modules>
     <packaging>pom</packaging>
 
