--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>1.9.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
