--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>domain</module>
         <module>service</module>
         <module>fileshare</module>
+        <module>gft-client</module>
     </modules>
     <packaging>pom</packaging>
 
