--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -11,6 +11,13 @@
 
     <groupId>nl.ocwduo.vzub</groupId>
     <artifactId>batch</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
