--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>fileshare</module>
         <module>gft-client</module>
         <module>batch</module>
+        <module>rest</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -26,7 +27,12 @@
             <dependency>
                 <groupId>nl.ocwduo.vzub</groupId>
                 <artifactId>domain</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>nl.ocwduo.vzub</groupId>
+                <artifactId>service</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax</groupId>
