--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -30,6 +30,7 @@
     </dependencies>
 
     <build>
+        <finalName>rest</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
