- java 8.0 ingesteld in poms - dao test gemaakt voor nieuwe datamodel - begin utils class voor domain gemaakt - dubbele relatie uit veel domain objects gehaald

--- a/gui-xldeploy/pom.xml
+++ b/gui-xldeploy/pom.xml
@@ -13,4 +13,16 @@
     <artifactId>gui-xldeploy</artifactId>
 
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
