--- a/gui-xldeploy/pom.xml
+++ b/gui-xldeploy/pom.xml
@@ -12,6 +12,19 @@
     <groupId>nl.ocwduo.vzub</groupId>
     <artifactId>gui-xldeploy</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>nl.ocwduo.vzub</groupId>
+            <artifactId>liquibase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>nl.ocwduo.vzub</groupId>
+            <artifactId>rest</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -22,6 +35,121 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.xebialabs.xldeploy</groupId>
+                <artifactId>xldeploy-maven-plugin</artifactId>
+                <version>5.1.0</version>
+                <configuration>
+                    <socketTimeout>30000</socketTimeout>
+                    
+                    <deployables combine.self="override">
+                        <liquibase.Changelog name="vzub-liquibase"
+                                             location="src/generated/liquibase">
+                            <scanPlaceholders>true</scanPlaceholders>
+                            <changeLogFile>master.changelog.xml</changeLogFile>
+                        </liquibase.Changelog>
+                        <!-- war file -->
+                        <jee.War name="${project.artifactId}" groupId="${project.groupId}"
+                                 artifactId="${project.artifactId}"
+                                 location="${basedir}/../rest/target/rest.war"/>
+
+                        <!-- database -->
+                        <duo.JbossdmDb2ServerDataSourceSpec
+                                name="kadta">
+                            <jndiName>java:/jdbc/kadta</jndiName>
+                            <username>{{database.kadta.username}}</username>
+                            <password>{{database.kadta.password}}</password>
+                            <maxPoolSize>10</maxPoolSize>
+                            <connectionUrl>{{database.kadta.connectionUrl}}</connectionUrl>
+                        </duo.JbossdmDb2ServerDataSourceSpec>
+                        <duo.JbossdmDb2ServerDataSourceSpec
+                                name="jidta">
+                            <jndiName>java:/jdbc/xadta</jndiName>
+                            <username>{{database.xadta.username}}</username>
+                            <password>{{database.xadta.password}}</password>
+                            <maxPoolSize>10</maxPoolSize>
+                            <connectionUrl>{{database.xadta.connectionUrl}}</connectionUrl>
+                        </duo.JbossdmDb2ServerDataSourceSpec>
+                        <duo.JbossdmDb2ServerDataSourceSpec
+                                name="jjdta">
+                            <jndiName>java:/jdbc/jjdta</jndiName>
+                            <username>{{database.jjdta.username}}</username>
+                            <password>{{database.jjdta.password}}</password>
+                            <maxPoolSize>10</maxPoolSize>
+                            <connectionUrl>{{database.jjdta.connectionUrl}}</connectionUrl>
+                        </duo.JbossdmDb2ServerDataSourceSpec>
+                        <duo.JbossPerformanceLoggingConfigSpec name="perflog-config-xa">
+                            <applicationCode>xa</applicationCode>
+                        </duo.JbossPerformanceLoggingConfigSpec>
+                        <duo.JbossdmSqlServerDataSourceSpec name="perfmon">
+                            <jndiName>java:/jdbc/perfmon</jndiName>
+                            <username>{{database.perfmon.username}}</username>
+                            <password>{{database.perfmon.password}}</password>
+                            <maxPoolSize>10</maxPoolSize>
+                            <connectionUrl>{{database.perfmon.connectionUrl}}</connectionUrl>
+                        </duo.JbossdmSqlServerDataSourceSpec>
+
+                        <!-- Queue Connection Factory. -->
+                        <duo.JbossWmqQueueConnectionFactorySpec
+                                name="QCF">
+                            <jndiName>java:/jms/VZUB/QCF</jndiName>
+                            <queueManager>{{qcf.queueManager}}</queueManager>
+                            <host>{{qcf.host}}</host>
+                            <port>{{qcf.port}}</port>
+                            <channel>{{qcf.channel}}</channel>
+                            <transportType>CLIENT</transportType>
+                            <qcfUsername>{{qcf.username}}</qcfUsername>
+                            <qcfPassword>{{qcf.password}}</qcfPassword>
+                            <className>com.ibm.mq.connector.outbound.ManagedConnectionFactoryImpl</className>
+                        </duo.JbossWmqQueueConnectionFactorySpec>
+
+                        <!-- Queues -->
+                        <duo.JbossWmqQueueSpec name="{{queue.vzubInputQueue}}">
+                            <jndiName>java:/jms/XAB/inputQueue</jndiName>
+                            <baseQueueName>{{queue.xabInputQueue}}</baseQueueName>
+                            <baseQueueManagerName>{{qcf.queueManager}}</baseQueueManagerName>
+                        </duo.JbossWmqQueueSpec>
+                        <duo.JbossSystemPropertySpec name="OMGEVING">
+                            <systemPropertyValue>{{OMGEVING}}</systemPropertyValue>
+                        </duo.JbossSystemPropertySpec>
+                    </deployables>
+                    <serverAddress>${xldeploy.server}</serverAddress>
+                    <context>${xldeploy.contextroot}</context>
+                    <port>${xldeploy.port}</port>
+                    <secured>${xldeploy.secured}</secured>
+                    <applicationName>klantcontact/vzub/rest</applicationName>
+                    <environmentId>${xldeploy.environmentId}</environmentId>
+                    <deletePreviouslyDeployedDar>true</deletePreviouslyDeployedDar>
+                </configuration>
+            </plugin>
+
+            <!-- liquibase -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>nl.ocwduo.vzub</groupId>
+                                    <artifactId>liquibase</artifactId>
+                                    <type>test-jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>src/generated</outputDirectory>
+                                    <includes>**/*changelog*</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
