--- a/liquibase/pom.xml
+++ b/liquibase/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>nl.ocwduo.vzub</groupId>
     <artifactId>liquibase</artifactId>
     <build>
         <plugins>
@@ -29,8 +29,8 @@
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
-                    <outputChangeLogFile>src/test/resources/db.changelog.vzub.xml</outputChangeLogFile>
-                    <changeLogFile>src/test/resources/master.changelog.xml</changeLogFile>
+                    <outputChangeLogFile>src/main/resources/db.changelog.vzub.xml</outputChangeLogFile>
+                    <changeLogFile>src/main/resources/master.changelog.xml</changeLogFile>
                     <username>in434jag</username>
                     <password>wW!!201603</password>
                     <defaultSchemaName>JIDTAONT</defaultSchemaName>
@@ -53,6 +53,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
