--- a/rest-xldeploy/pom.xml
+++ b/rest-xldeploy/pom.xml
@@ -10,20 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.ocwduo.vzub</groupId>
-    <artifactId>gui-xldeploy</artifactId>
+    <artifactId>rest-xldeploy</artifactId>
 
     <dependencies>
 
-        <dependency>
-            <groupId>nl.ocwduo.vzub</groupId>
-            <artifactId>liquibase</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>nl.ocwduo.vzub</groupId>
-            <artifactId>rest</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -37,18 +27,26 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.xebialabs.xldeploy</groupId>
-                <artifactId>xldeploy-maven-plugin</artifactId>
-                <version>5.1.0</version>
+                <!--<groupId>com.xebialabs.xldeploy</groupId>-->
+                <!--<artifactId>xldeploy-maven-plugin</artifactId>-->
+                <!--<version>5.1.0</version>-->
+                <groupId>com.xebialabs.deployit</groupId>
+                <artifactId>maven-deployit-plugin</artifactId>
+                <version>4.5.2</version>
                 <configuration>
                     <socketTimeout>30000</socketTimeout>
-                    
+
                     <deployables combine.self="override">
-                        <liquibase.Changelog name="vzub-liquibase"
-                                             location="src/generated/liquibase">
+                        <!--<liquibase.Changelog name="db.changelog.vzub.xml"-->
+                                             <!--location="${project.basedir}/liquibase/src/main/resources/db.changelog.vzub.xml">-->
+                            <!--<scanPlaceholders>true</scanPlaceholders>-->
+                            <!--<changeLogFile>master.changelog.xml</changeLogFile>-->
+                        <!--</liquibase.Changelog>-->
+                        <liquibase.Changelog name="liquibase" location="../liquibase/src/main/resources">
                             <scanPlaceholders>true</scanPlaceholders>
                             <changeLogFile>master.changelog.xml</changeLogFile>
                         </liquibase.Changelog>
+
                         <!-- war file -->
                         <jee.War name="${project.artifactId}" groupId="${project.groupId}"
                                  artifactId="${project.artifactId}"
@@ -110,6 +108,12 @@
                             <baseQueueName>{{queue.xabInputQueue}}</baseQueueName>
                             <baseQueueManagerName>{{qcf.queueManager}}</baseQueueManagerName>
                         </duo.JbossWmqQueueSpec>
+                        <duo.JbossWmqQueueSpec name="{{queue.vzubOutputQueue}}">
+                            <jndiName>java:/jms/XAB/outputQueue</jndiName>
+                            <baseQueueName>{{queue.xabInputQueue}}</baseQueueName>
+                            <baseQueueManagerName>{{qcf.queueManager}}</baseQueueManagerName>
+                        </duo.JbossWmqQueueSpec>
+
                         <duo.JbossSystemPropertySpec name="OMGEVING">
                             <systemPropertyValue>{{OMGEVING}}</systemPropertyValue>
                         </duo.JbossSystemPropertySpec>
@@ -118,7 +122,7 @@
                     <context>${xldeploy.contextroot}</context>
                     <port>${xldeploy.port}</port>
                     <secured>${xldeploy.secured}</secured>
-                    <applicationName>klantcontact/vzub/rest</applicationName>
+                    <applicationName>klantcontact/vzub/vzub-rest</applicationName>
                     <environmentId>${xldeploy.environmentId}</environmentId>
                     <deletePreviouslyDeployedDar>true</deletePreviouslyDeployedDar>
                 </configuration>
