--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>service</artifactId>
         </dependency>
         <dependency>
+            <groupId>nl.ocwduo.vzub</groupId>
+            <artifactId>liquibase</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.2.4.RELEASE</version>
