--- a/fileshare/pom.xml
+++ b/fileshare/pom.xml
@@ -23,6 +23,18 @@
             <version>0.1.52</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
