--- a/autorisatie/pom.xml
+++ b/autorisatie/pom.xml
@@ -9,44 +9,36 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rest</artifactId>
-    <packaging>jar</packaging>
-
+    <artifactId>autorisatie</artifactId>
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>nl.ocwduo.componenten</groupId>-->
+            <!--<artifactId>componenten-logging-performance</artifactId>-->
+            <!--<version>3.1-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>nl.ocwduo.vzub</groupId>
-            <artifactId>service</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>nl.ocwduo.vzub</groupId>
-            <artifactId>autorisatie</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>nl.ocwduo.vzub</groupId>
-            <artifactId>liquibase</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <groupId>nl.ocwduo.logx</groupId>
+            <artifactId>logx-api</artifactId>
+            <version>1.1.10</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
         </dependency>
     </dependencies>
 
     <build>
-        <finalName>rest</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
-
 </project>
