--- a/webApplication/pom.xml
+++ b/webApplication/pom.xml
@@ -8,14 +8,25 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
 
-    <artifactId>rest</artifactId>
-    <packaging>jar</packaging>
-
+    <artifactId>webApplication</artifactId>
     <dependencies>
         <dependency>
             <groupId>nl.ocwduo.vzub</groupId>
+            <artifactId>domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nl.ocwduo.vzub</groupId>
             <artifactId>service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nl.ocwduo.vzub</groupId>
+            <artifactId>fileshare</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nl.ocwduo.zkl</groupId>
+            <artifactId>zkl-client</artifactId>
         </dependency>
         <dependency>
             <groupId>nl.ocwduo.vzub</groupId>
@@ -23,30 +34,40 @@
         </dependency>
         <dependency>
             <groupId>nl.ocwduo.vzub</groupId>
-            <artifactId>liquibase</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>batch</artifactId>
         </dependency>
+        <dependency>
+            <groupId>nl.ocwduo.vzub</groupId>
+            <artifactId>rest</artifactId>
+        </dependency>
+
+
+
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.2.4.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
         </dependency>
     </dependencies>
 
     <build>
-        <finalName>rest</finalName>
+        <finalName>vzub</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
+
 
 </project>
